# Machine_Learning_proj_end_to_end

./: .gitignore  LICENSE  MakeFile  Makefile  README.md  app.py  application.py  codespell-ignore.txt  pyproject.toml  requirements.txt  setup.py
.ebextensions/: python.config
.github/workflows/: ML_CD_Pipeline.yml  ML_CI_Pipeline.yml  ML_CT_Pipeline.yml  ci_pipeline_ml.yml  ci_train and _eval.yml  ci_unittest.yml  unittest.yml
.gradio/flagged/: dataset1.csv
app/: README.md  performance_app.py  requirements.txt
artifacts/: model.pkl  model_20250422_0758.pkl  model_20250607_0016.pkl  preprocessor.pkl
notebook/: 1. EDA STUDENT PERFORMANCE.ipynb  2. MODEL TRAINING.ipynb
results/: metrics.txt
src/: __init__.py  exception.py  logger.py  utils.py
src/components/: __init__.py  data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: __init__.py  predict_pipeline.py  train_pipeline.py
tests/: __init__.py  test_data_ingestion.py  test_data_transformation.py  test_model_trainer.py
