[tool.poetry]
name = "machine-learning-proj-end-to-end"
version = "0.1.0"
description = ""
authors = ["DavidTitoInfantas <dtitoin10@gmail.com>"]
readme = "README.md"
packages = [{include = "machine_learning_proj_end_to_end", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
catboost = "1.2.5"
ipykernel = "^6.29.5"
xgboost = "^2.1.3"
dill = "^0.3.9"
flask = "^3.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
